--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
               <a class="nav-link" href="#services">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#portfolio">Portfolio</a>
+              <a class="nav-link" href="#portfolio">Galería</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" href="#about">Nosotros</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
             <li class="nav-item">
