--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>AMOR ∞</title>
+    <title>AMOR ∞ - E&J</title>
     <!-- Favicon-->
     <link rel="icon" type="image/png" href="assets/img/icon_hearth.png" />
     <!-- Font Awesome icons (free version)-->
@@ -35,7 +35,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand" href="#page-top"
-          ><img src="assets/img/navbar-logo.svg" alt="..."
+          ><img
+            src="assets/img/logo_loveyou.png"
+            alt="..."
+            style="width: auto; height: 80px"
         /></a>
         <button
           class="navbar-toggler"
@@ -52,7 +55,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#services">Servicios</a>
+              <a class="nav-link" href="#services">Agradecimiento</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#portfolio">Galería</a>
@@ -84,9 +87,13 @@
     <section class="page-section" id="services">
       <div class="container">
         <div class="text-center">
-          <h2 class="section-heading text-uppercase">Servicios</h2>
+          <h2 class="section-heading text-uppercase">Agradecimiento</h2>
           <h3 class="section-subheading text-muted">
-            Lorem ipsum dolor sit amet consectetur.
+            Gracias por permanecer a mi lado a pesar de todas las situaciones
+            difíciles que se nos presentan, eres todo para mí.<br />Juntos vamos
+            a luchar para alcanzar todas nuestras metas que nos hemos planteado.
+            Ahora, te voy a dar solo 3 razones principales por las que<br />te
+            necesito conmigo hasta el fin del mundo.
           </h3>
         </div>
         <div class="row text-center">
@@ -127,15 +134,32 @@
             </p>
           </div>
         </div>
+        <div class="text-center">
+          <br />
+          <br />
+          <h3 class="section-subheading text-muted">
+            Estas son solo algunas razones de las porque te amo y te adoro con
+            todo mi corazón y por las que no quiero que te vayas de mi vida.
+            <br />Tú eres parte de mí y yo de ti. <br />Gracias por tanto y
+            perdón por tan poco.
+          </h3>
+          <h2>♥ Eres el amor de mi vida ♥</h2>
+        </div>
       </div>
     </section>
     <!-- Portfolio Grid-->
-    <section class="page-section bg-light" id="portfolio">
+    <section
+      class="page-section"
+      id="portfolio"
+      style="background: linear-gradient(to bottom, #f2a8ff, #b90bd8)"
+    >
       <div class="container">
         <div class="text-center">
-          <h2 class="section-heading text-uppercase">Portfolio</h2>
+          <h2 class="section-heading text-uppercase">
+            Nuestros recuerdos juntos
+          </h2>
           <h3 class="section-subheading text-muted">
-            Lorem ipsum dolor sit amet consectetur.
+            Disfruto de cada momento a tu lado.
           </h3>
         </div>
         <div class="row">
@@ -585,7 +609,7 @@
       <div class="container">
         <div class="text-center">
           <h2 class="section-heading text-uppercase" style="color: white">
-            Nuestras melodías favoritas
+            Nuestra melodía favorita
           </h2>
           <h3 class="section-subheading text-muted" style="color: white">
             Para que siempre las escuches!
@@ -612,34 +636,16 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-4 text-lg-start">
-            Copyright &copy; Your Website 2023
-          </div>
-          <div class="col-lg-4 my-3 my-lg-0">
-            <a
-              class="btn btn-dark btn-social mx-2"
-              href="#!"
-              aria-label="Twitter"
-              ><i class="fab fa-twitter"></i
-            ></a>
-            <a
-              class="btn btn-dark btn-social mx-2"
-              href="#!"
-              aria-label="Facebook"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
-            <a
-              class="btn btn-dark btn-social mx-2"
-              href="#!"
-              aria-label="LinkedIn"
-              ><i class="fab fa-linkedin-in"></i
-            ></a>
+            Con Amor &copy; Elaborado por José BG
           </div>
           <div class="col-lg-4 text-lg-end">
-            <a class="link-dark text-decoration-none me-3" href="#!"
-              >Privacy Policy</a
+            <a
+              class="link-dark text-decoration-none me-3"
+              href="https://www.youtube.com/watch?v=8g3KHA8ROiA"
+              >♥ Te amo demasiado mi Vida ♥</a
             >
-            <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
           </div>
+          <div class="col-lg-4 text-end">Con amor para tí mi cielo</div>
         </div>
       </div>
     </footer>
