--- a/index.html
+++ b/index.html
@@ -84,7 +84,11 @@
       </div>
     </header>
     <!-- Services-->
-    <section class="page-section" id="services">
+    <section
+      class="page-section"
+      id="services"
+      style="background: linear-gradient(to bottom, #ffece4, #e1bbac)"
+    >
       <div class="container">
         <div class="text-center">
           <h2 class="section-heading text-uppercase">Agradecimiento</h2>
@@ -151,7 +155,7 @@
     <section
       class="page-section"
       id="portfolio"
-      style="background: linear-gradient(to bottom, #f2a8ff, #b90bd8)"
+      style="background: linear-gradient(to bottom, #ffa4a4, #f27575)"
     >
       <div class="container">
         <div class="text-center">
@@ -183,9 +187,9 @@
                 />
               </a>
               <div class="portfolio-caption">
-                <div class="portfolio-caption-heading">Threads</div>
+                <div class="portfolio-caption-heading">Eres la mejor</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Illustration
+                  novia del mundo
                 </div>
               </div>
             </div>
@@ -210,9 +214,9 @@
                 />
               </a>
               <div class="portfolio-caption">
-                <div class="portfolio-caption-heading">Explore</div>
+                <div class="portfolio-caption-heading">Amo estar contigo</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Graphic Design
+                  comiéndonos a besos
                 </div>
               </div>
             </div>
@@ -668,39 +672,24 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">
-                    Lorem ipsum dolor sit amet consectetur.
-                  </p>
+                  <h2 class="text-uppercase">Eres la mejor</h2>
+                  <p class="item-intro text-muted">Nunca lo olvides</p>
                   <img
                     class="img-fluid d-block mx-auto"
                     src="assets/img/portfolio/1.jpg"
                     alt="..."
                   />
                   <p>
-                    Use this area to describe your project. Lorem ipsum dolor
-                    sit amet, consectetur adipisicing elit. Est blanditiis
-                    dolorem culpa incidunt minus dignissimos deserunt repellat
-                    aperiam quasi sunt officia expedita beatae cupiditate,
-                    maiores repudiandae, nostrum, reiciendis facere nemo!
+                    Amo cada momento que estamos juntos y me encanta que siempre
+                    quieras ir a cenar o comer conmigo.
                   </p>
-                  <ul class="list-inline">
-                    <li>
-                      <strong>Client:</strong>
-                      Threads
-                    </li>
-                    <li>
-                      <strong>Category:</strong>
-                      Illustration
-                    </li>
-                  </ul>
                   <button
                     class="btn btn-primary btn-xl text-uppercase"
                     data-bs-dismiss="modal"
                     type="button"
                   >
                     <i class="fas fa-xmark me-1"></i>
-                    Close Project
+                    Cerrar
                   </button>
                 </div>
               </div>
