--- a/index.html
+++ b/index.html
@@ -74,15 +74,22 @@
     <!-- Masthead-->
     <header class="masthead">
       <div class="container">
-        <div class="masthead-subheading">Bienvenida amor de mi vida</div>
-        <div class="masthead-heading text-uppercase">
+        <div class="masthead-subheading" style="color: #930d00">
+          Bienvenida amor de mi vida
+        </div>
+        <div class="masthead-heading text-uppercase" style="color: #ac0202">
           ¡Feliz 4° Aniversario!
         </div>
-        <a class="btn btn-primary btn-xl text-uppercase" href="#services"
-          >Presióname para ver más</a
+        <a
+          class="btn btn-primary btn-xl text-uppercase"
+          href="#services"
+          style="color: #ffff"
         >
+          Presióname para ver más
+        </a>
       </div>
     </header>
+
     <!-- Services-->
     <section
       class="page-section"
