--- a/index.html
+++ b/index.html
@@ -565,43 +565,50 @@
       </div>
     </section>
     <!-- Clients-->
-    <div class="py-5">
+    <div
+      class="py-5"
+      style="background: linear-gradient(to bottom, #930000, #c14848)"
+    >
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-3 col-sm-6 my-3">
             <a href="#!"
               ><img
                 class="img-fluid img-brand d-block mx-auto"
-                src="assets/img/logos/microsoft.svg"
+                src="https://gifdb.com/images/high/wandavision-and-vision-happy-couple-ih9swvgpov48vb8w.gif"
                 alt="..."
                 aria-label="Microsoft Logo"
+                style="width: 100%; height: auto"
             /></a>
           </div>
           <div class="col-md-3 col-sm-6 my-3">
             <a href="#!"
               ><img
                 class="img-fluid img-brand d-block mx-auto"
-                src="assets/img/logos/google.svg"
+                src="https://64.media.tumblr.com/da695de2606724150166f81208297663/5327a2337845765f-e5/s400x600/1347b1a12db6bfde087b84b053ba21d056409f9c.gif"
                 alt="..."
                 aria-label="Google Logo"
+                style="width: 90%; height: auto"
             /></a>
           </div>
           <div class="col-md-3 col-sm-6 my-3">
             <a href="#!"
               ><img
                 class="img-fluid img-brand d-block mx-auto"
-                src="assets/img/logos/facebook.svg"
+                src="https://images6.fanpop.com/image/photos/43700000/Vision-and-Wanda-WandaVision-1-01-wandavision-43750316-540-360.gif"
                 alt="..."
                 aria-label="Facebook Logo"
+                style="width: 100%; height: auto"
             /></a>
           </div>
           <div class="col-md-3 col-sm-6 my-3">
             <a href="#!"
               ><img
                 class="img-fluid img-brand d-block mx-auto"
-                src="assets/img/logos/ibm.svg"
+                src="https://media.tenor.com/tQ1o9-c0Ee0AAAAC/wandavision-vision.gif"
                 alt="..."
                 aria-label="IBM Logo"
+                style="width: 100%; height: auto"
             /></a>
           </div>
         </div>
