--- a/index.html
+++ b/index.html
@@ -491,6 +491,7 @@
             background-color: rgba(12, 198, 223, 0.5);
             padding: 40px;
             border-radius: 20px;
+            display: inline-block;
           }
         </style>
 
@@ -498,9 +499,16 @@
           <div class="col-lg-8 mx-auto text-center">
             <p class="large text-muted" style="color: #000000 !important">
               <b>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut
-                eaque, laboriosam veritatis, quos non quis ad perspiciatis,
-                totam corporis ea, alias ut unde.
+                Bueno mi amorcito hermosa, quisiera decirte todo a la vez, pero
+                en la infinidad de cosas, se me hace imposible organizarlas de
+                alguna manera como para no olvidarme ninguna. Simplemente
+                gracias por existir en mi vida, sobre todo por estar en los
+                momentos más díficiles para mí, por darme esa fuerza y
+                motivación para seguir con mis estudio. Creéme que si hoy me
+                mato estudiando, es porque quiero en el futuro darte lo mejor,
+                todo el mundo si es posible. Por eso quiero hacerte una
+                propuesta, estás dispuesta a ir a muerte juntos pese a todos los
+                obtáculos y presiones que el destino nos ponga.
                 <br />
                 <br />
                 ¿Aceptas el reto?
