--- a/index.html
+++ b/index.html
@@ -109,50 +109,69 @@
         </div>
         <div class="row text-center">
           <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="my-3">E-Commerce</h4>
+            <style>
+              .img-redimensionada {
+                width: 50%;
+                height: auto;
+              }
+              .sombreado-3d {
+                box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5),
+                  0 2px 4px rgba(0, 0, 0, 0.1);
+                border-radius: 20px;
+              }
+            </style>
+
+            <img
+              src="assets/img/up_novios.jpg"
+              alt="Imagen"
+              class="img-redimensionada sombreado-3d"
+            />
+            <h4 class="my-3">Eres mi complemento<br />perfecto</h4>
             <p class="text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
-              maxime quam architecto quo inventore harum ex magni, dicta
-              impedit.
+              Eres mi otra mitad que tanto necesitaba y buscaba, pese a las
+              discusiones y todo lo que pueda pasar, tienes que entender que la
+              teoría de que "los polos opuestos se atraen", no existe de la
+              nada, grabatelo bien en tu cabecita.
+            </p>
+          </div>
+
+          <div class="col-md-4">
+            <img
+              src="assets/img/goku_novios.jpg"
+              alt="Imagen"
+              class="img-redimensionada sombreado-3d"
+            />
+            <h4 class="my-3">Eres todo para<br />mí</h4>
+            <p class="text-muted">
+              No te voy a mentir, tengo mucho miedo perderte, sé que a veces mis
+              acciones pueden no coincidir con mis palabras, pero a pesar de
+              todo te amo como no te imaginas y te pido que sigas a mi lado para
+              siempre.
             </p>
           </div>
           <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="my-3">Responsive Design</h4>
+            <img
+              src="assets/img/wandavision_novios.jpg"
+              alt="Imagen"
+              class="img-redimensionada sombreado-3d"
+            />
+            <h4 class="my-3">Eres mi<br />motor y motivo</h4>
             <p class="text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
-              maxime quam architecto quo inventore harum ex magni, dicta
-              impedit.
-            </p>
-          </div>
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="my-3">Web Security</h4>
-            <p class="text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
-              maxime quam architecto quo inventore harum ex magni, dicta
-              impedit.
+              Si no fuera por tu ayuda, probablemente no seguiría estudiando,
+              eres esa fuerza que mi alma necesita para seguir persistiendo por
+              una de mis metas más importantes en mi vida. Quiero en el futuro
+              darte todo a tí y a nuestra familia.
             </p>
           </div>
         </div>
         <div class="text-center">
-          <br />
-          <br />
           <h3 class="section-subheading text-muted">
+            ------------------------------------------------------------------------------------------------------------------------------------------------------<br />
             Estas son solo algunas razones de las porque te amo y te adoro con
             todo mi corazón y por las que no quiero que te vayas de mi vida.
             <br />Tú eres parte de mí y yo de ti. <br />Gracias por tanto y
-            perdón por tan poco.
+            perdón por tan poco.<br />
+            ------------------------------------------------------------------------------------------------------------------------------------------------------
           </h3>
           <h2>♥ Eres el amor de mi vida ♥</h2>
         </div>
@@ -248,9 +267,9 @@
                 />
               </a>
               <div class="portfolio-caption">
-                <div class="portfolio-caption-heading">Finish</div>
+                <div class="portfolio-caption-heading">Eres mi loquita</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Identity
+                  preciosa
                 </div>
               </div>
             </div>
@@ -275,9 +294,9 @@
                 />
               </a>
               <div class="portfolio-caption">
-                <div class="portfolio-caption-heading">Lines</div>
+                <div class="portfolio-caption-heading">A tu lado</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Branding
+                  es donde soy feliz
                 </div>
               </div>
             </div>
@@ -302,9 +321,9 @@
                 />
               </a>
               <div class="portfolio-caption">
-                <div class="portfolio-caption-heading">Southwest</div>
+                <div class="portfolio-caption-heading">Adoro</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Website Design
+                  nuestros besitos ricos
                 </div>
               </div>
             </div>
@@ -329,9 +348,9 @@
                 />
               </a>
               <div class="portfolio-caption">
-                <div class="portfolio-caption-heading">Window</div>
+                <div class="portfolio-caption-heading">Pasear juntos</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  Photography
+                  es lo mejor
                 </div>
               </div>
             </div>
@@ -713,9 +732,9 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">Project Name</h2>
+                  <h2 class="text-uppercase">Amo estar contigo</h2>
                   <p class="item-intro text-muted">
-                    Lorem ipsum dolor sit amet consectetur.
+                    Disfrutando cada segundo a tu lado
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
@@ -723,29 +742,17 @@
                     alt="..."
                   />
                   <p>
-                    Use this area to describe your project. Lorem ipsum dolor
-                    sit amet, consectetur adipisicing elit. Est blanditiis
-                    dolorem culpa incidunt minus dignissimos deserunt repellat
-                    aperiam quasi sunt officia expedita beatae cupiditate,
-                    maiores repudiandae, nostrum, reiciendis facere nemo!
+                    El tiempo cuando estoy contigo, se pasa volando, a veces me
+                    encantaría detener el tiempo, solo para estar más rato
+                    contigo, dandonos mucho amor.
                   </p>
-                  <ul class="list-inline">
-                    <li>
-                      <strong>Client:</strong>
-                      Explore
-                    </li>
-                    <li>
-                      <strong>Category:</strong>
-                      Graphic Design
-                    </li>
-                  </ul>
                   <button
                     class="btn btn-primary btn-xl text-uppercase"
                     data-bs-dismiss="modal"
                     type="button"
                   >
                     <i class="fas fa-xmark me-1"></i>
-                    Close Project
+                    Cerrar
                   </button>
                 </div>
               </div>
@@ -772,9 +779,9 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">Project Name</h2>
+                  <h2 class="text-uppercase">Eres mi loquita</h2>
                   <p class="item-intro text-muted">
-                    Lorem ipsum dolor sit amet consectetur.
+                    Solo tú sacas mi "yo" interno
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
@@ -782,29 +789,18 @@
                     alt="..."
                   />
                   <p>
-                    Use this area to describe your project. Lorem ipsum dolor
-                    sit amet, consectetur adipisicing elit. Est blanditiis
-                    dolorem culpa incidunt minus dignissimos deserunt repellat
-                    aperiam quasi sunt officia expedita beatae cupiditate,
-                    maiores repudiandae, nostrum, reiciendis facere nemo!
+                    Tú eres la única que conoces cada parte de mí, sabes como
+                    soy y como me comporto. Eres esa personita que debe estar a
+                    mi lado siempre, amándome como lo vienes haciendo estos 4
+                    años juntos.
                   </p>
-                  <ul class="list-inline">
-                    <li>
-                      <strong>Client:</strong>
-                      Finish
-                    </li>
-                    <li>
-                      <strong>Category:</strong>
-                      Identity
-                    </li>
-                  </ul>
                   <button
                     class="btn btn-primary btn-xl text-uppercase"
                     data-bs-dismiss="modal"
                     type="button"
                   >
                     <i class="fas fa-xmark me-1"></i>
-                    Close Project
+                    Cerrar
                   </button>
                 </div>
               </div>
@@ -831,9 +827,9 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">Project Name</h2>
+                  <h2 class="text-uppercase">A tu lado</h2>
                   <p class="item-intro text-muted">
-                    Lorem ipsum dolor sit amet consectetur.
+                    Es el lugar más comodo y perfecto
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
@@ -841,29 +837,19 @@
                     alt="..."
                   />
                   <p>
-                    Use this area to describe your project. Lorem ipsum dolor
-                    sit amet, consectetur adipisicing elit. Est blanditiis
-                    dolorem culpa incidunt minus dignissimos deserunt repellat
-                    aperiam quasi sunt officia expedita beatae cupiditate,
-                    maiores repudiandae, nostrum, reiciendis facere nemo!
+                    Sé que no soy ese José de antes, el tiempo me ha cambiado,
+                    no sé si para bien o mal, pero quiero que me entiendas que
+                    eso no quita lo demasiado que te amo. No tendré las mismas
+                    formas de demostrarte mi amor, pero creéme que mi corazón te
+                    pertenece.
                   </p>
-                  <ul class="list-inline">
-                    <li>
-                      <strong>Client:</strong>
-                      Lines
-                    </li>
-                    <li>
-                      <strong>Category:</strong>
-                      Branding
-                    </li>
-                  </ul>
                   <button
                     class="btn btn-primary btn-xl text-uppercase"
                     data-bs-dismiss="modal"
                     type="button"
                   >
                     <i class="fas fa-xmark me-1"></i>
-                    Close Project
+                    Cerrar
                   </button>
                 </div>
               </div>
@@ -890,39 +876,27 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">
-                    Lorem ipsum dolor sit amet consectetur.
-                  </p>
+                  <h2 class="text-uppercase">Adoro</h2>
+                  <p class="item-intro text-muted">Todo de tí</p>
                   <img
                     class="img-fluid d-block mx-auto"
                     src="assets/img/portfolio/5.jpg"
                     alt="..."
                   />
                   <p>
-                    Use this area to describe your project. Lorem ipsum dolor
-                    sit amet, consectetur adipisicing elit. Est blanditiis
-                    dolorem culpa incidunt minus dignissimos deserunt repellat
-                    aperiam quasi sunt officia expedita beatae cupiditate,
-                    maiores repudiandae, nostrum, reiciendis facere nemo!
+                    Te adoro por dentro y por fuera. Los momentos de "desestrés"
+                    (tu sabes a que me refiero), son la sensación más pura de
+                    amor mutuo que nos tenemos. Y no quiero que eso cambie, es
+                    absolutamente maravilloso cada sensación que siento al tener
+                    eso contigo.
                   </p>
-                  <ul class="list-inline">
-                    <li>
-                      <strong>Client:</strong>
-                      Southwest
-                    </li>
-                    <li>
-                      <strong>Category:</strong>
-                      Website Design
-                    </li>
-                  </ul>
                   <button
                     class="btn btn-primary btn-xl text-uppercase"
                     data-bs-dismiss="modal"
                     type="button"
                   >
                     <i class="fas fa-xmark me-1"></i>
-                    Close Project
+                    Cerrar
                   </button>
                 </div>
               </div>
@@ -949,39 +923,27 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">
-                    Lorem ipsum dolor sit amet consectetur.
-                  </p>
+                  <h2 class="text-uppercase">Pasear juntos</h2>
+                  <p class="item-intro text-muted">A un camino sin final</p>
                   <img
                     class="img-fluid d-block mx-auto"
                     src="assets/img/portfolio/6.jpg"
                     alt="..."
                   />
                   <p>
-                    Use this area to describe your project. Lorem ipsum dolor
-                    sit amet, consectetur adipisicing elit. Est blanditiis
-                    dolorem culpa incidunt minus dignissimos deserunt repellat
-                    aperiam quasi sunt officia expedita beatae cupiditate,
-                    maiores repudiandae, nostrum, reiciendis facere nemo!
+                    No te olvides que el camino es muy largo, y tenemos que
+                    estar juntos siempre, venciendo todos los males y obstáculos
+                    que se nos impongan, pero no te olvides que Dios siempre
+                    pone las peores batallas a sus mejores guerreros. Y nosotros
+                    no nos rendimos nunca.
                   </p>
-                  <ul class="list-inline">
-                    <li>
-                      <strong>Client:</strong>
-                      Window
-                    </li>
-                    <li>
-                      <strong>Category:</strong>
-                      Photography
-                    </li>
-                  </ul>
                   <button
                     class="btn btn-primary btn-xl text-uppercase"
                     data-bs-dismiss="modal"
                     type="button"
                   >
                     <i class="fas fa-xmark me-1"></i>
-                    Close Project
+                    Cerrar
                   </button>
                 </div>
               </div>
